# inteligenceSystemsProject

./: calculate_flows.ipynb  get_negatives.py  get_statistics.py  get_top100_statistics.py  split_to_frames.py  video_downloader.py
MFF-pytorch/: .gitignore  dataset.py  main.py  process_msasl.py  test_models.py  test_records.txt  test_records_new.txt  train_records.txt  train_records_new.txt  val_records.txt  val_records_new.txt
flow_computation/: CMakeLists.txt  compile.sh  optical_flow.cpp
pythonFlowCompute/: FlowComputationExample.ipynb  compute_flow.py
